--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "pride-and-prejudice-fanfic-index",
+  "name": "jafanfic",
   "version": "0.0.1",
   "private": true,
-    "engines": {
+  "engines": {
     "node": "0.6.x",
-    "npm":  "1.0.x"
+    "npm": "1.0.x"
   },
   "dependencies": {
     "express": "2.5.8",
     "jade": ">= 0.0.1",
     "sugar": "~1.2.4",
-    "coffee-script": "~1.2.0"
-  }
+    "coffee-script": "~1.2.0",
+    "apricot": "0.0.6",
+    "zombie": "~2.0.0-alpha8",
+    "dreamopt": "~0.8.0",
+    "debug": "~0.7.0",
+    "numpad": "0.0.1",
+    "underscore": "~1.4.2",
+    "moment": "~1.7.2"
+  },
+  "bin": "bin/jafanfic.js"
 }
